--- a/templates/partials/topics_list.tpl.save.1
+++ b/templates/partials/topics_list.tpl.save.1
@@ -45,7 +45,7 @@
 			</div>
 			<ul class="threadstats hidden-xs"> 
 				<li>[[global:posts]]: <span class="badge progress-bar-danger">{topics.postcount}</span></li>
-				<li>[[global:views]]: <span class="badge progress-bar-warning">{topics.viewcount}</span></li>
+				<li>[[global:views]]: <span class="badge prlabel-warning">{topics.viewcount}</li>
 			</ul>
 			
 			<dl class="threadlastpost">
@@ -59,10 +59,9 @@
 					<a href="<!-- IF topics.teaser.user.userslug -->{relative_path}/user/{topics.teaser.user.userslug}<!-- ELSE -->#<!-- ENDIF topics.teaser.user.userslug -->">
 						{topics.teaser.user.username}
 					</a>
-					
 				</dd>
 				<dd>
-					<!--[[global:replied_ago,--> <a href="{relative_path}/topic/{topics.slug}/{topics.teaser.index}" title="Ir al último mensaje" class="lastpost"><span class="timeago" style="color:black" title="{topics.teaser.timestamp}"></span> →</a> <!-- ]] -->
+					[[global:replied_ago, <a href="{relative_path}/topic/{topics.slug}/{topics.teaser.index}" title="Ir al último mensaje" class="lastpost"><span class="timeago" title="{topics.teaser.timestamp}"></span>]] →</a>
 				</dd>
 				<!-- ENDIF topics.unreplied -->
 			</dl>
